# my-first-substrate-test

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: atest.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
