[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'my-first-substrate-test-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.my-first-substrate-test-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['my-first-substrate-test-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
